Fix footer and horizontal scrolling

--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -8,13 +8,13 @@ main {
   background-image: url('../images/white-element-image.png');
   background-size: 300px; 
   background-repeat: repeat;
+  overflow-x: hidden;
 }
 
 * {
   padding: 0;
   margin: 0;
-  font-family: "Merriweather", serif, Times New Roman;
-  font-weight: 300;
+  font-family: "Merriweather", serif, times;
   font-size: 16px;
 }
 
