--- a/styles/rest-of-home-page.css
+++ b/styles/rest-of-home-page.css
@@ -199,11 +199,12 @@ Now onto the text-picture sections
 
 
 .footer {
-  height: 300px;
+  padding: 32px 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction:column;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .footer-text-container {
